# alder

./: .gitignore  Cargo.toml  README.md  accept_all.sh  reject_all.sh
.git-hooks/: pre-push
.github/workflows/: main.yml
crates/core/: Cargo.toml
crates/core/src/: input.rs  node.rs  parsers.rs  state.rs  testing.rs
crates/core/tests/: json.rs
crates/core/tests/snaps/: json::cst::array_0.snap  json::cst::array_10.snap  json::cst::array_2.snap  json::cst::array_3.snap  json::cst::array_5.snap  json::cst::array_8.snap  json::cst::array_9.snap  json::cst::object_7.snap  json::cst::object_8.snap  json::cst::value_10.snap  json::cst::value_5.snap  json::cst::value_9.snap
derive/: Cargo.toml
derive/src/: lib.rs  macro_alder.rs  macro_ast.rs  test_case.rs  utils.rs
examples/: calc.rs  json.rs
examples/lisp/: main.rs  report.rs
examples/md/: main.rs  report.rs
examples/snaps/: json::cst::array_10.snap  json::cst::array_4.snap  json::cst::array_7.snap  json::cst::array_8.snap  json::cst::boolean_2.snap  json::cst::boolean_3.snap  json::cst::comment_2.snap  json::cst::comment_3.snap  json::cst::object_3.snap  json::cst::object_4.snap  json::cst::object_5.snap  json::cst::object_7.snap  json::cst::object_8.snap  json::cst::string_3.snap  json::cst::value_10.snap  json::cst::value_12.snap  json::cst::value_12.snap.new  json::cst::value_2.snap  json::cst::value_4.snap  json::cst::value_9.snap  json_cst_array_1.snap  json_cst_array_10.snap  json_cst_array_7.snap  json_cst_array_8.snap  json_cst_array_9.snap  json_cst_boolean_2.snap  json_cst_boolean_3.snap  json_cst_comment_0.snap  json_cst_comment_1.snap  json_cst_comment_3.snap  json_cst_object_6.snap  json_cst_object_7.snap  json_cst_object_8.snap  json_cst_string_0.snap  json_cst_string_3.snap  json_cst_value_1.snap  json_cst_value_10.snap  json_cst_value_12.snap  json_cst_value_8.snap  json_cst_value_9.snap
scripts/: publish.sh
src/: ast.rs  chars.rs  display.rs  errors.rs  input.rs  lexer.rs  lib.rs  macros.rs  node.rs  offset.rs  parsed.rs  parser.rs  parsers.rs  problem.rs  state.rs  testing.rs  tests.rs
src/combinators/: and.rs  map.rs  mod.rs  or.rs  peek.rs
src/core/: input.rs  parsed.rs  parser.rs  span.rs  state.rs
src/cst/: node.rs  parsers.rs
src/display/: fancy_code.rs  mod.rs
src/examples/: mod.rs  report.rs
src/parsed/: mod.rs  node.rs  node_kind.rs  node_vec.rs
tests/: json.rs
tests/snaps/: json::array_0_.snap  json::array_1_true_.snap  json::array_2_true_false_.snap  json::array_3_true_false_.snap  json::array_4_true_false_.snap  json::array_5_true_false_.snap  json::array_6_true_false_.snap  json::boolean_0_true.snap  json::boolean_1_false.snap  json::comment_0_foo.snap  json::comment_1_foo_bar_baz_not_foo.snap  json::comment_2_outline_comment_.snap  json::comment_3_outline_comment_not_a_comment.snap  json::comment_4_multiline_comment_not_a_comment.snap  json::cst::array_6.snap  json::cst::boolean_0_true.snap  json::cst::boolean_1.snap  json::cst::boolean_1_false.snap  json::cst::boolean_2.snap  json::cst::object_0.snap  json::cst::object_1.snap  json::cst::string_1.snap  (+38 more)
(+51 files in other folders)
