[package]
name = "alder"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.10"
alder-derive = { path = "derive", optional = true }
regex = { version = "1.3.4", optional = true }

[dev-dependencies]
test-case = "1.0.0"
regex = "1.3.4"

[features]
debug = []
with_regex = ["regex"]
derive = ["alder-derive"]
