[package]
name = "alder"
version = "0.1.1"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Parser combinator library inspired by Elm parser error messages"
homepage = "https://github.com/frondeus/alder"
repository = "https://github.com/frondeus/alder"
keywords = ["parser", "combinator", "elm"]
categories = ["parsing"]

exclude = [ "**/*.snap", "**/*.snap.new" ]

[features]
derive = ["alder-derive"]

[workspace]
members = ["derive"]

[dependencies]
# Workspace
alder-derive = { path = "derive", version = "=0.1.1", optional = true }

# Crates.io
derive_more = "0.99.2"
colored = "1.9.2"

[dev-dependencies]
alder-derive = { path = "derive", version = "=0.1.1" }

