[package]
name = "alder"
version = "0.10.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Parser combinator library inspired by Elm parser error messages"
homepage = "https://github.com/frondeus/alder"
repository = "https://github.com/frondeus/alder"
keywords = ["parser", "combinator", "elm"]
categories = ["parsing"]

exclude = [ "**/*.snap", "**/*.snap.new" ]

[features]
derive = ["alder-derive"]
tty = ["termion"]

[workspace]
members = ["derive"]

[dependencies]
# Workspace
alder-derive = { path = "derive", version = "=0.2.3", optional = true }

# Crates.io
derive_more = "0.99.2"
itertools = "0.8.2"
termion = { version = "1.5.5", optional = true }
unicode-segmentation = "1.6.0"
unicode-xid = "0.2.0"

[dev-dependencies]
alder-derive = { path = "derive", version = "=0.2.3" }
test-case = "1.0.0"

