[package]
name = "alder-derive"
version = "0.2.2"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Parser combinator library inspired by Elm parser error messages"
homepage = "https://github.com/frondeus/alder"
repository = "https://github.com/frondeus/alder"
keywords = ["parser", "combinator", "elm"]
categories = ["parsing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = [] }
unindent = "0.1.5"
darling = "0.10.2"
